external-crates/move/crates/move-package-alt/tests/data/duplicate_top_level_field/Move@parsed.snap
---
source: crates/move-package-alt/tests/test_runner.rs
---
error: Error while loading `"tests/data/duplicate_top_level_field/Move.toml"`
  ┌─ "tests/data/duplicate_top_level_field/Move.toml":5:1
  │
5 │ [package]
  │ ^
  │
  = invalid table header
    duplicate key `package` in document root
